--- a/sản%20phẩm/hp-aio-24-df1028d-i5-1135g7-8gb-512gb-23-8-inch-fullhd-touch-ban-phim-chuot-win10/index.html
+++ b/sản%20phẩm/hp-aio-24-df1028d-i5-1135g7-8gb-512gb-23-8-inch-fullhd-touch-ban-phim-chuot-win10/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>Redirecting...</title>
-		<meta http-equiv="refresh" content="0;url=https://lethuanan.github.io/wordpress/s%E1%BA%A3n%20ph%E1%BA%A9m/hp-aio-24-df1028d-i5-1135g7-8gb-512gb-23-8-inch-fullhd-touch-ban-phim-chuot-win10/">
+		<meta http-equiv="refresh" content="0;url=https://lethuanan.github.io/MyWordPress/s%E1%BA%A3n%20ph%E1%BA%A9m/hp-aio-24-df1028d-i5-1135g7-8gb-512gb-23-8-inch-fullhd-touch-ban-phim-chuot-win10/">
 	</head>
 	<body>
 		<script type="text/javascript">
-			window.location = "https://lethuanan.github.io/wordpress/s%E1%BA%A3n%20ph%E1%BA%A9m/hp-aio-24-df1028d-i5-1135g7-8gb-512gb-23-8-inch-fullhd-touch-ban-phim-chuot-win10/";
+			window.location = "https://lethuanan.github.io/MyWordPress/s%E1%BA%A3n%20ph%E1%BA%A9m/hp-aio-24-df1028d-i5-1135g7-8gb-512gb-23-8-inch-fullhd-touch-ban-phim-chuot-win10/";
 		</script>
 
-		<p>You are being redirected to <a href="https://lethuanan.github.io/wordpress/s%E1%BA%A3n%20ph%E1%BA%A9m/hp-aio-24-df1028d-i5-1135g7-8gb-512gb-23-8-inch-fullhd-touch-ban-phim-chuot-win10/">https://lethuanan.github.io/wordpress/s%E1%BA%A3n%20ph%E1%BA%A9m/hp-aio-24-df1028d-i5-1135g7-8gb-512gb-23-8-inch-fullhd-touch-ban-phim-chuot-win10/</a></p>
+		<p>You are being redirected to <a href="https://lethuanan.github.io/MyWordPress/s%E1%BA%A3n%20ph%E1%BA%A9m/hp-aio-24-df1028d-i5-1135g7-8gb-512gb-23-8-inch-fullhd-touch-ban-phim-chuot-win10/">https://lethuanan.github.io/MyWordPress/s%E1%BA%A3n%20ph%E1%BA%A9m/hp-aio-24-df1028d-i5-1135g7-8gb-512gb-23-8-inch-fullhd-touch-ban-phim-chuot-win10/</a></p>
 	</body>
 </html>
