--- a/sản%20phẩm/laptop-hp-envy-13-ba1030tu-i7-1165g7-8gb-512gb-office-hs2019-win10/index.html
+++ b/sản%20phẩm/laptop-hp-envy-13-ba1030tu-i7-1165g7-8gb-512gb-office-hs2019-win10/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>Redirecting...</title>
-		<meta http-equiv="refresh" content="0;url=https://lethuanan.github.io/wordpress/s%E1%BA%A3n%20ph%E1%BA%A9m/laptop-hp-envy-13-ba1030tu-i7-1165g7-8gb-512gb-office-hs2019-win10/">
+		<meta http-equiv="refresh" content="0;url=https://lethuanan.github.io/MyWordPress/s%E1%BA%A3n%20ph%E1%BA%A9m/laptop-hp-envy-13-ba1030tu-i7-1165g7-8gb-512gb-office-hs2019-win10/">
 	</head>
 	<body>
 		<script type="text/javascript">
-			window.location = "https://lethuanan.github.io/wordpress/s%E1%BA%A3n%20ph%E1%BA%A9m/laptop-hp-envy-13-ba1030tu-i7-1165g7-8gb-512gb-office-hs2019-win10/";
+			window.location = "https://lethuanan.github.io/MyWordPress/s%E1%BA%A3n%20ph%E1%BA%A9m/laptop-hp-envy-13-ba1030tu-i7-1165g7-8gb-512gb-office-hs2019-win10/";
 		</script>
 
-		<p>You are being redirected to <a href="https://lethuanan.github.io/wordpress/s%E1%BA%A3n%20ph%E1%BA%A9m/laptop-hp-envy-13-ba1030tu-i7-1165g7-8gb-512gb-office-hs2019-win10/">https://lethuanan.github.io/wordpress/s%E1%BA%A3n%20ph%E1%BA%A9m/laptop-hp-envy-13-ba1030tu-i7-1165g7-8gb-512gb-office-hs2019-win10/</a></p>
+		<p>You are being redirected to <a href="https://lethuanan.github.io/MyWordPress/s%E1%BA%A3n%20ph%E1%BA%A9m/laptop-hp-envy-13-ba1030tu-i7-1165g7-8gb-512gb-office-hs2019-win10/">https://lethuanan.github.io/MyWordPress/s%E1%BA%A3n%20ph%E1%BA%A9m/laptop-hp-envy-13-ba1030tu-i7-1165g7-8gb-512gb-office-hs2019-win10/</a></p>
 	</body>
 </html>
