Initial Generated Site

--- a/sản%20phẩm/xiaomi-redmi-note-10-pro/index.html
+++ b/sản%20phẩm/xiaomi-redmi-note-10-pro/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>Redirecting...</title>
-		<meta http-equiv="refresh" content="0;url=https://lethuanan.github.io/wordpress/s%E1%BA%A3n%20ph%E1%BA%A9m/xiaomi-redmi-note-10-pro/">
+		<meta http-equiv="refresh" content="0;url=https://lethuanan.github.io/MyWordPress/s%E1%BA%A3n%20ph%E1%BA%A9m/xiaomi-redmi-note-10-pro/">
 	</head>
 	<body>
 		<script type="text/javascript">
-			window.location = "https://lethuanan.github.io/wordpress/s%E1%BA%A3n%20ph%E1%BA%A9m/xiaomi-redmi-note-10-pro/";
+			window.location = "https://lethuanan.github.io/MyWordPress/s%E1%BA%A3n%20ph%E1%BA%A9m/xiaomi-redmi-note-10-pro/";
 		</script>
 
-		<p>You are being redirected to <a href="https://lethuanan.github.io/wordpress/s%E1%BA%A3n%20ph%E1%BA%A9m/xiaomi-redmi-note-10-pro/">https://lethuanan.github.io/wordpress/s%E1%BA%A3n%20ph%E1%BA%A9m/xiaomi-redmi-note-10-pro/</a></p>
+		<p>You are being redirected to <a href="https://lethuanan.github.io/MyWordPress/s%E1%BA%A3n%20ph%E1%BA%A9m/xiaomi-redmi-note-10-pro/">https://lethuanan.github.io/MyWordPress/s%E1%BA%A3n%20ph%E1%BA%A9m/xiaomi-redmi-note-10-pro/</a></p>
 	</body>
 </html>
