--- a/sản%20phẩm/tai-nghe-bluetooth-airpods-2-apple-mv7n2/index.html
+++ b/sản%20phẩm/tai-nghe-bluetooth-airpods-2-apple-mv7n2/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>Redirecting...</title>
-		<meta http-equiv="refresh" content="0;url=https://lethuanan.github.io/wordpress/s%E1%BA%A3n%20ph%E1%BA%A9m/tai-nghe-bluetooth-airpods-2-apple-mv7n2/">
+		<meta http-equiv="refresh" content="0;url=https://lethuanan.github.io/MyWordPress/s%E1%BA%A3n%20ph%E1%BA%A9m/tai-nghe-bluetooth-airpods-2-apple-mv7n2/">
 	</head>
 	<body>
 		<script type="text/javascript">
-			window.location = "https://lethuanan.github.io/wordpress/s%E1%BA%A3n%20ph%E1%BA%A9m/tai-nghe-bluetooth-airpods-2-apple-mv7n2/";
+			window.location = "https://lethuanan.github.io/MyWordPress/s%E1%BA%A3n%20ph%E1%BA%A9m/tai-nghe-bluetooth-airpods-2-apple-mv7n2/";
 		</script>
 
-		<p>You are being redirected to <a href="https://lethuanan.github.io/wordpress/s%E1%BA%A3n%20ph%E1%BA%A9m/tai-nghe-bluetooth-airpods-2-apple-mv7n2/">https://lethuanan.github.io/wordpress/s%E1%BA%A3n%20ph%E1%BA%A9m/tai-nghe-bluetooth-airpods-2-apple-mv7n2/</a></p>
+		<p>You are being redirected to <a href="https://lethuanan.github.io/MyWordPress/s%E1%BA%A3n%20ph%E1%BA%A9m/tai-nghe-bluetooth-airpods-2-apple-mv7n2/">https://lethuanan.github.io/MyWordPress/s%E1%BA%A3n%20ph%E1%BA%A9m/tai-nghe-bluetooth-airpods-2-apple-mv7n2/</a></p>
 	</body>
 </html>
